force-app/main/default/objects/Property_Advance__c/Property_Advance__c.object-meta.xml
<CustomObject>
    <description>The Individual Property for which a Bridge Advance was made</description>
    <label>Property Advance</label>
    <nameField>
        <label>Property Advance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Advances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>