force-app/main/default/objects/Property_Advance__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <formula>Advance__r.Deal__r.Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>