force-app/main/default/objects/Property_Advance__c/fields/Advance__c.field-meta.xml
<CustomField>
    <fullName>Advance__c</fullName>
    <label>Advance</label>
    <referenceTo>Advance__c</referenceTo>
    <relationshipLabel>Property Advances</relationshipLabel>
    <relationshipName>Property_Advances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>