force-app/main/default/objects/Property_Advance__c/fields/Advance_Fee_Minus_Broker_Fee__c.field-meta.xml
<CustomField>
    <fullName>Advance_Fee_Minus_Broker_Fee__c</fullName>
    <formula>Advance_Fee__c - Broker_Advance_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Advance Fee minus the Broker Fee</inlineHelpText>
    <label>Advance Fee Minus Broker Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>