force-app/main/default/objects/Property_Advance__c/fields/Advance_FeePerc_Minus_Broker_FeePerc__c.field-meta.xml
<CustomField>
    <fullName>Advance_FeePerc_Minus_Broker_FeePerc__c</fullName>
    <description>Advance Fee % minus the Broker Fee % based on Broker Fee Paid When and Broker Fee Paid by Whom</description>
    <formula>IF( 
 OR(
  ISBLANK( TEXT( Advance__r.Deal__r.Broker_Fee_Paid_When__c )),
  AND(
   ISPICKVAL( Advance__r.Deal__r.Broker_Fee_Paid_When__c , &apos;Each Initial Advance&apos;) ,
   ISPICKVAL( Advance__r.Deal__r.Broker_Fee_Paid_By_Whom__c , &apos;CoreVest&apos;))) ,
 Property__r.Advance_Fee__c  - Property__r.Broker_Advance_Fee_Perc__c,
 Property__r.Advance_Fee__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Advance Fee % minus the Broker Fee % based on Broker Fee Paid When and Broker Fee Paid by Whom</inlineHelpText>
    <label>Advance Fee % Minus Broker Fee %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>