force-app/main/default/objects/Property_Advance__c/fields/Advance_ID__c.field-meta.xml
<CustomField>
    <fullName>Advance_ID__c</fullName>
    <formula>Advance__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance ID</label>
    <type>Text</type>
</CustomField>