force-app/main/default/objects/Property_Advance__c/fields/Advance_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Advance_Record_Type_Name__c</fullName>
    <label>Advance Record Type Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Construction Advance</fullName>
            </value>
            <value>
                <fullName>Construction Draw</fullName>
            </value>
            <value>
                <fullName>Non Renovation Initial</fullName>
            </value>
            <value>
                <fullName>Renovation Initial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>