force-app/main/default/objects/Property_Advance__c/fields/Advance_Status__c.field-meta.xml
<CustomField>
    <fullName>Advance_Status__c</fullName>
    <formula>TEXT(Advance__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Status</label>
    <type>Text</type>
</CustomField>