force-app/main/default/objects/Property_Advance__c/fields/Advance_Status_text__c.field-meta.xml
<CustomField>
    <fullName>Advance_Status_text__c</fullName>
    <description>Copy of the formula field in text field in order to use on Rollup criterias</description>
    <label>Advance Status text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>