force-app/main/default/objects/Property_Advance__c/fields/Advance_Wire_Date__c.field-meta.xml
<CustomField>
    <fullName>Advance_Wire_Date__c</fullName>
    <formula>Advance__r.Wire_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Wire Date</label>
    <type>Date</type>
</CustomField>