force-app/main/default/objects/Property_Advance__c/fields/After_Repair_Value__c.field-meta.xml
<CustomField>
    <fullName>After_Repair_Value__c</fullName>
    <description>The Appraised After Repair value of this Property at the time of funding</description>
    <inlineHelpText>The Appraised After Repair value of this Property at the time of funding</inlineHelpText>
    <label>Appraised After Repair Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>