force-app/main/default/objects/Property_Advance__c/fields/Approved_Advance_Amount_Calc__c.field-meta.xml
<CustomField>
    <fullName>Approved_Advance_Amount_Calc__c</fullName>
    <description>Total of Initial Disbursement and Renovation Advance</description>
    <formula>Initial_Disbursement__c + Renovation_Reserve__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of Initial Disbursement and Renovation Advance</inlineHelpText>
    <label>Approved Advance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>