force-app/main/default/objects/Property_Advance__c/fields/Approved_Advance_Amount_Max__c.field-meta.xml
<CustomField>
    <fullName>Approved_Advance_Amount_Max__c</fullName>
    <description>The maximum that can be funded for both the Initial Disbursement and Renovation Advances for the life of this loan</description>
    <inlineHelpText>The maximum that can be funded for both the Initial Disbursement and Renovation Advances for the life of this loan</inlineHelpText>
    <label>Approved Advance Amount Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>