force-app/main/default/objects/Property_Advance__c/fields/Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Amount__c</fullName>
    <description>Approved Amount for Renovation Funding</description>
    <inlineHelpText>Approved Amount for Renovation Funding</inlineHelpText>
    <label>Approved Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>