force-app/main/default/objects/Property_Advance__c/fields/Approved_Assignment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Approved_Assignment_Fee__c</fullName>
    <label>Approved Assignment Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>