force-app/main/default/objects/Property_Advance__c/fields/Approved_Renovation_Holdback__c.field-meta.xml
<CustomField>
    <fullName>Approved_Renovation_Holdback__c</fullName>
    <description>This is the max amount that can be funded for the Renovation.  This is not what will be funded on this Advance</description>
    <inlineHelpText>This is the max amount that can be funded for the Renovation.  This is not what will be funded on this Advance</inlineHelpText>
    <label>Approved Renovation Holdback</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>