force-app/main/default/objects/Property_Advance__c/fields/ARV_LTV_currency__c.field-meta.xml
<CustomField>
    <fullName>ARV_LTV_currency__c</fullName>
    <label>ARV LTV currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>