force-app/main/default/objects/Property_Advance__c/fields/ARV_LTV_percent__c.field-meta.xml
<CustomField>
    <fullName>ARV_LTV_percent__c</fullName>
    <label>ARV LTV percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>