force-app/main/default/objects/Property_Advance__c/fields/As_Is_LTV_currency__c.field-meta.xml
<CustomField>
    <fullName>As_Is_LTV_currency__c</fullName>
    <label>As-Is LTV currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>