force-app/main/default/objects/Property_Advance__c/fields/BlackSquare_Fee__c.field-meta.xml
<CustomField>
    <fullName>BlackSquare_Fee__c</fullName>
    <inlineHelpText>Changes the label from blacksquare fee to onboarding Fee.</inlineHelpText>
    <label>Onboarding Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>