force-app/main/default/objects/Property_Advance__c/fields/BPO_Appraisal_Fee__c.field-meta.xml
<CustomField>
    <fullName>BPO_Appraisal_Fee__c</fullName>
    <label>Appraisal Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>