force-app/main/default/objects/Property_Advance__c/fields/BPO_Appraisal_Value__c.field-meta.xml
<CustomField>
    <fullName>BPO_Appraisal_Value__c</fullName>
    <description>Bridge Use
Similar to Appraised Value Amount</description>
    <inlineHelpText>The Appraised As Is value of this Property at the time of funding</inlineHelpText>
    <label>Appraised As Is Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>