force-app/main/default/objects/Property_Advance__c/fields/Broker_Advance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Broker_Advance_Fee__c</fullName>
    <description>Bridge Use</description>
    <label>Broker Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>