force-app/main/default/objects/Property_Advance__c/fields/Budget_Review_Report_Fee__c.field-meta.xml
<CustomField>
    <fullName>Budget_Review_Report_Fee__c</fullName>
    <label>Budget Review Report Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>