force-app/main/default/objects/Property_Advance__c/fields/Daily_Interest_Rate_Formula__c.field-meta.xml
<CustomField>
    <fullName>Daily_Interest_Rate_Formula__c</fullName>
    <formula>( Initial_Disbursement__c * Advance__r.Deal__r.Rate__c ) / 360</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Interest Rate Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>