force-app/main/default/objects/Property_Advance__c/fields/Daily_Interest_Rate_Total__c.field-meta.xml
<CustomField>
    <fullName>Daily_Interest_Rate_Total__c</fullName>
    <formula>IF(AND(
Name == &apos;1&apos;,
 Property__r.Deal__r.RecordType.Name   == &apos;Single Asset Bridge Loan&apos;),
Daily_Interest_Rate__c *  Days_Between_Wire_and_Last_Day_Month__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Interest Rate Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>