force-app/main/default/objects/Property_Advance__c/fields/Days_Between_Wire_and_Last_Day_Month__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_Wire_and_Last_Day_Month__c</fullName>
    <description>Advance__r.Last_Day_of_the_Wire_Month__c - Wire_Date__c</description>
    <formula>IF(
  MONTH(  Wire_Date__c ) = 12,
  DATE( YEAR( Wire_Date__c ), 12, 31 ),
  DATE( YEAR( Wire_Date__c ), MONTH ( Wire_Date__c ) + 1, 1 ) - 1 
) - Wire_Date__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days between the Wire Date and the last day of the Month</inlineHelpText>
    <label>Days Between Wire and Last Day of Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>