force-app/main/default/objects/Property_Advance__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <description>Deal Name of the related Advance</description>
    <formula>Advance__r.Deal__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Deal Name of the related Advance</inlineHelpText>
    <label>Deal Name</label>
    <type>Text</type>
</CustomField>