force-app/main/default/objects/Property_Advance__c/fields/Deal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Deal_Stage__c</fullName>
    <description>Stage of the related Deal.  Used in DOMO</description>
    <formula>TEXT(Advance__r.Deal__r.StageName)</formula>
    <inlineHelpText>Stage of the related Deal</inlineHelpText>
    <label>Deal Stage</label>
    <type>Text</type>
</CustomField>