force-app/main/default/objects/Property_Advance__c/fields/DealOwnerName__c.field-meta.xml
<CustomField>
    <fullName>DealOwnerName__c</fullName>
    <formula>Advance__r.Deal__r.Owner_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Owner Name</label>
    <type>Text</type>
</CustomField>