force-app/main/default/objects/Property_Advance__c/fields/Disbursement_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Expiration_Date__c</fullName>
    <formula>Property__r.Requested_Funding_Date__c + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disbursement Expiration Date</label>
    <type>Date</type>
</CustomField>