force-app/main/default/objects/Property_Advance__c/fields/Environmental_Fee__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Fee__c</fullName>
    <label>Environmental Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>