force-app/main/default/objects/Property_Advance__c/fields/Escrow_Agent__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escrow Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Property Advances</relationshipLabel>
    <relationshipName>Property_Advances</relationshipName>
    <type>Lookup</type>
</CustomField>