force-app/main/default/objects/Property_Advance__c/fields/Funding_Conditions_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Funding_Conditions_Email_Date__c</fullName>
    <description>Used to capture funding conditions email date</description>
    <formula>Advance__r.Funding_Conditions_Email_Date__c</formula>
    <label>Funding Conditions Email Date</label>
    <type>Date</type>
</CustomField>