force-app/main/default/objects/Property_Advance__c/fields/Geotechnical_Report_Fee__c.field-meta.xml
<CustomField>
    <fullName>Geotechnical_Report_Fee__c</fullName>
    <label>Geotechnical Report Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>