force-app/main/default/objects/Property_Advance__c/fields/Holdback_Amount__c.field-meta.xml
<CustomField>
    <fullName>Holdback_Amount__c</fullName>
    <label>Renovation Holdback</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>