force-app/main/default/objects/Property_Advance__c/fields/Holdback_To_Rehab_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Holdback_To_Rehab_Ratio__c</fullName>
    <description>Percent of the Construction amount funded</description>
    <inlineHelpText>Percent of the Construction amount funded</inlineHelpText>
    <label>Holdback To Rehab Ratio</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>