force-app/main/default/objects/Property_Advance__c/fields/Initial_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Initial_Disbursement__c</fullName>
    <label>Initial Disbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>