force-app/main/default/objects/Property_Advance__c/fields/Initial_LTC_dollar__c.field-meta.xml
<CustomField>
    <fullName>Initial_LTC_dollar__c</fullName>
    <label>Initial LTC dollar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>