force-app/main/default/objects/Property_Advance__c/fields/Inspection_Fee__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Fee__c</fullName>
    <description>Inspection Fee for a Renovation Funding</description>
    <label>Inspection Fee</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>