force-app/main/default/objects/Property_Advance__c/fields/Interest_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>Interest_Calculation_Method__c</fullName>
    <defaultValue>&quot;Actual 360&quot;</defaultValue>
    <label>Interest Calculation Method</label>
    <length>15</length>
    <type>Text</type>
</CustomField>