force-app/main/default/objects/Property_Advance__c/fields/Interest_Collected_at_Closing__c.field-meta.xml
<CustomField>
    <fullName>Interest_Collected_at_Closing__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interest Collected at Closing</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>