force-app/main/default/objects/Property_Advance__c/fields/Is_Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Assigned_User__c</fullName>
    <description>This will be TRUE if the User viewing this Record is the Underwriter, Closer, Analyst or Coordinator on the Advance</description>
    <formula>OR(
 $User.Id = Advance__r.Closer__c ,
 $User.Id = Advance__r.Underwriter__c ,
 $User.Id = Advance__r.Advance_Coordinator__c ,
 $User.Id = Advance__r.Advance_Analyst__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This will be checked if the User viewing this Record is the Underwriter, Closer, Analyst or Coordinator on the Advance</inlineHelpText>
    <label>Is Assigned User</label>
    <type>Checkbox</type>
</CustomField>