force-app/main/default/objects/Property_Advance__c/fields/Late_Charge_Balance__c.field-meta.xml
<CustomField>
    <fullName>Late_Charge_Balance__c</fullName>
    <defaultValue>&quot;5% of interest payment&quot;</defaultValue>
    <label>Late Charge Balance</label>
    <length>25</length>
    <type>Text</type>
</CustomField>