force-app/main/default/objects/Property_Advance__c/fields/Legal_Fee_Balance__c.field-meta.xml
<CustomField>
    <fullName>Legal_Fee_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Legal Fee Balance</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>