force-app/main/default/objects/Property_Advance__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <description>Lender from the Advance Record</description>
    <formula>TEXT(Advance__r.Lender__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lender</label>
    <type>Text</type>
</CustomField>