force-app/main/default/objects/Property_Advance__c/fields/Lien_Position__c.field-meta.xml
<CustomField>
    <fullName>Lien_Position__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Lien Position</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>