force-app/main/default/objects/Property_Advance__c/fields/Loan_Advance_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Advance_Number__c</fullName>
    <formula>Advance__r.Loan_Number__c + &quot;-&quot; +   Advance__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Advance Number</label>
    <type>Text</type>
</CustomField>