force-app/main/default/objects/Property_Advance__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <defaultValue>&quot;Interest Only&quot;</defaultValue>
    <label>Loan Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>