force-app/main/default/objects/Property_Advance__c/fields/Max_LTC_Dollar__c.field-meta.xml
<CustomField>
    <fullName>Max_LTC_Dollar__c</fullName>
    <label>Max LTC $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>