force-app/main/default/objects/Property_Advance__c/fields/Max_LTC_Dollar_nooverride__c.field-meta.xml
<CustomField>
    <fullName>Max_LTC_Dollar_nooverride__c</fullName>
    <label>Max LTC Dollar nooverride</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>