force-app/main/default/objects/Property_Advance__c/fields/Max_LTV__c.field-meta.xml
<CustomField>
    <fullName>Max_LTV__c</fullName>
    <label>Max LTV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>