force-app/main/default/objects/Property_Advance__c/fields/Non_Recoverable_Corporate_Advance_Balanc__c.field-meta.xml
<CustomField>
    <fullName>Non_Recoverable_Corporate_Advance_Balanc__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Non-Recoverable Corporate Advance Balanc</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>