force-app/main/default/objects/Property_Advance__c/fields/Original_Requested_Renovation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Requested_Renovation_Amount__c</fullName>
    <description>The amount requested for this Construction funding</description>
    <inlineHelpText>The amount requested for this Construction funding</inlineHelpText>
    <label>Original Requested Renovation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>