force-app/main/default/objects/Property_Advance__c/fields/PCR_Report_Fee__c.field-meta.xml
<CustomField>
    <fullName>PCR_Report_Fee__c</fullName>
    <description>Plan &amp; Cost Review report fee</description>
    <inlineHelpText>Plan &amp; Cost Review report fee</inlineHelpText>
    <label>PCR Report Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>