force-app/main/default/objects/Property_Advance__c/fields/Perc_of_Rehab_Budget__c.field-meta.xml
<CustomField>
    <fullName>Perc_of_Rehab_Budget__c</fullName>
    <description>Bridge Use</description>
    <label>% of Rehab Budget</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>