force-app/main/default/objects/Property_Advance__c/fields/Phase_2_Report_Fee__c.field-meta.xml
<CustomField>
    <fullName>Phase_2_Report_Fee__c</fullName>
    <label>Phase 2 Report Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>