force-app/main/default/objects/Property_Advance__c/fields/Pmt_Freq__c.field-meta.xml
<CustomField>
    <fullName>Pmt_Freq__c</fullName>
    <defaultValue>&quot;Monthly&quot;</defaultValue>
    <label>Pmt Freq</label>
    <length>15</length>
    <type>Text</type>
</CustomField>