force-app/main/default/objects/Property_Advance__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Property Advances</relationshipLabel>
    <relationshipName>Property_Advances</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>