force-app/main/default/objects/Property_Advance__c/fields/Property_Advance_Number__c.field-meta.xml
<CustomField>
    <fullName>Property_Advance_Number__c</fullName>
    <formula>Advance__r.Advance_Num__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Advance Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>