force-app/main/default/objects/Property_Advance__c/fields/Property_Condition_Report_Fee__c.field-meta.xml
<CustomField>
    <fullName>Property_Condition_Report_Fee__c</fullName>
    <label>Property Condition Report Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>