force-app/main/default/objects/Property_Advance__c/fields/Recoverable_Corporate_Advance_Balance__c.field-meta.xml
<CustomField>
    <fullName>Recoverable_Corporate_Advance_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Recoverable Corporate Advance Balance</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>