force-app/main/default/objects/Property_Advance__c/fields/Renovation_Holdback_Amount_Released__c.field-meta.xml
<CustomField>
    <fullName>Renovation_Holdback_Amount_Released__c</fullName>
    <description>The Amount of the Renovation Holdback released</description>
    <inlineHelpText>The Amount of the Renovation Holdback released</inlineHelpText>
    <label>Renovation Holdback Amount Released</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>