force-app/main/default/objects/Property_Advance__c/fields/Renovation_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Renovation_Reserve__c</fullName>
    <label>Renovation Advance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>