force-app/main/default/objects/Property_Advance__c/fields/Report_Fee_Total__c.field-meta.xml
<CustomField>
    <fullName>Report_Fee_Total__c</fullName>
    <description>Formula field to sum all report fee fields on the property advance</description>
    <formula>Property_Condition_Report_Fee__c +  PCR_Report_Fee__c +  Budget_Review_Report_Fee__c +  Zoning_Report_Fee__c +  Geotechnical_Report_Fee__c +  Seismic_Report_Fee__c +   Inspection_Fee__c  +  Phase_1_Report_Fee__c +  Phase_2_Report_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sums all report fees</inlineHelpText>
    <label>Report Fee Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>