force-app/main/default/objects/Property_Advance__c/fields/Requested_Funding_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Funding_Date__c</fullName>
    <formula>Property__r.Requested_Funding_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Funding Date</label>
    <type>Date</type>
</CustomField>