force-app/main/default/objects/Property_Advance__c/fields/Restricted_Escrow_Balance__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Escrow_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Restricted Escrow Balance</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>