force-app/main/default/objects/Property_Advance__c/fields/Servicing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Fee__c</fullName>
    <label>Servicing Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>