force-app/main/default/objects/Property_Advance__c/fields/Suspense_Balance__c.field-meta.xml
<CustomField>
    <fullName>Suspense_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Suspense Balance</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>