force-app/main/default/objects/Property_Advance__c/fields/T_I_Amount__c.field-meta.xml
<CustomField>
    <fullName>T_I_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>T&amp;I Amount</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>